Drawing triangle without memory leaks and with player input working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.5)
 
 project(blocks)
 
+include(cmake/conan.cmake)
+
+conan_cmake_run(REQUIRES "sdl2/2.0.9@bincrafters/stable"
+                BASIC_SETUP
+                TARGETS
+                NO_OUTPUT_DIRS
+                BUILD missing)
+
 if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
     include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
     conan_basic_setup(TARGETS NO_OUTPUT_DIRS)
@@ -9,9 +17,17 @@ endif()
 
 add_executable(blocks
     deps/glad/src/glad.cpp
-    src/defines.h
+    src/linear_allocator.hpp
+    src/memory.hpp
+    src/allocator.hpp
+    src/double_linked_list.hpp
+    src/input_system.hpp
+    src/input_system.cpp
+    src/defines.hpp
     src/logger.cpp
-    src/logger.h
+    src/logger.hpp
+    src/utils.hpp
+    src/utils.cpp
     src/main.cpp)
 
 target_compile_options(blocks PRIVATE -fno-rtti -fno-exceptions -std=c++14)
