Changes in the collections and triangle mesh usage
Collections now do not allocate memory by default. Started to use
triangle mesh to represent the cube as well. However the cube still
needs to be drawn using the mesh.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,10 @@ add_executable(blocks
     src/Shader.cpp
     src/PlayerInput.hpp
     src/Texture.hpp
-    src/Texture.cpp
     src/TextureCatalog.hpp
+    src/TextureCatalog.cpp
     src/TriangleMesh.hpp
+    src/OpenGL.hpp
 
     # Memory
     src/Memory.hpp
