Make it compile and run on windows
also start to add functionality for the resource file instead of using assimp for loading models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,26 +20,27 @@ if(CMAKE_GENERATOR STREQUAL "Ninja")
   file(COPY "resources" DESTINATION "${CMAKE_BINARY_DIR}")
 elseif(CMAKE_GENERATOR STREQUAL "Xcode")
   file(COPY "resources" DESTINATION "${CMAKE_BINARY_DIR}/Debug")
+elseif(MSVC)
+  file(COPY "resources" DESTINATION "${CMAKE_BINARY_DIR}")
 endif()
 
 #
 # Define Assimp library target
 #
-if(APPLE AND NOT IOS)
-    set(assimp_dir ${CMAKE_SOURCE_DIR}/deps/assimp/mac)
-else()
-    message(FATAL_ERROR "Platform not supported yet")
-endif()
+#if(APPLE AND NOT IOS)
+#set(assimp_dir ${CMAKE_SOURCE_DIR}/deps/assimp/mac)
+#else()
+#message(FATAL_ERROR "Platform not supported yet")
+#endif()
 
-add_library(assimp STATIC IMPORTED)
-set_target_properties(assimp
-  PROPERTIES
-    IMPORTED_LOCATION "${assimp_dir}/lib/libassimp.a"
-    INTERFACE_INCLUDE_DIRECTORIES "${assimp_dir}/include")
+#add_library(assimp STATIC IMPORTED)
+#set_target_properties(assimp
+#PROPERTIES
+#IMPORTED_LOCATION "${assimp_dir}/lib/libassimp.a"
+#INTERFACE_INCLUDE_DIRECTORIES "${assimp_dir}/include")
 
 add_executable(blocks
     deps/glad/src/glad.cpp
-
     # Core
     src/Program.hpp
     src/Program.cpp
@@ -54,6 +55,8 @@ add_executable(blocks
     src/OpenGL.hpp
     src/ResourceManager.hpp
     src/ResourceManager.cpp
+    src/ResourceFile.hpp
+    src/ResourceFile.cpp
 
     # Memory
     src/Memory.hpp
@@ -86,28 +89,39 @@ add_executable(blocks
 
     # FileSystem
     src/FileSystem.hpp
+    src/FileSystem/Common.cpp
 
     # Collections
     src/Collections/Array.hpp
     src/Collections/String.hpp
     src/Collections/StringView.hpp
+    src/Collections/RobinHashMap.hpp
+    src/Collections/RobinHashMap.cpp
 
     src/main.cpp)
 
+target_compile_definitions(blocks PRIVATE _USE_MATH_DEFINES)
+
 if(APPLE)
-    target_sources(blocks PRIVATE
-        src/FileSystem/Apple.cpp)
+    target_sources(blocks PRIVATE src/FileSystem/Apple.cpp)
+elseif(WIN32)
+    target_sources(blocks PRIVATE src/FileSystem/Windows.cpp)
+    target_compile_definitions(blocks PRIVATE _CRT_SECURE_NO_WARNINGS)
 endif()
 
-target_compile_options(blocks PRIVATE -fno-rtti -fno-exceptions -std=c++14)
+target_compile_options(blocks PRIVATE -fno-rtti -fno-exceptions)
+
+set_target_properties(blocks PROPERTIES CXX_STANDARD 14)
 
 target_include_directories(blocks
   PUBLIC
     deps/glad/include
     src)
 
+if(UNIX)
+    target_link_libraries(blocks PUBLIC m)
+endif()
+
 target_link_libraries(blocks
   PUBLIC
-    CONAN_PKG::sdl2
-    m
-    assimp)
+    CONAN_PKG::sdl2)
