--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,10 +110,12 @@ elseif(WIN32)
 endif()
 
 if(WIN32)
-    target_compile_options(blocks PRIVATE /EHsc- /GR-)
+	#target_compile_options(blocks PRIVATE /EHsc- /GR-)
+    target_compile_options(blocks PRIVATE /EHsc-)
     target_compile_definitions(blocks PRIVATE _HAS_EXCEPTIONS=0)
 else()
-    target_compile_options(blocks PRIVATE -fno-rtti -fno-exceptions)
+	#target_compile_options(blocks PRIVATE -fno-rtti -fno-exceptions)
+    target_compile_options(blocks PRIVATE -fno-exceptions)
 endif()
 
 set_target_properties(blocks PROPERTIES CXX_STANDARD 14)
