(WIP) initial implementation of json lib
this is still wip, since the lib was not tested yet. Also, remove the destroy function from the robin hash map, and make it more convenient by using destructors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ add_executable(blocks
     src/Sid.cpp
     src/Material.hpp
     src/Material.cpp
+    src/Json.hpp
+    src/Json.cpp
 
     # Memory
     src/Memory.hpp
