Start to create low level renderer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ add_executable(blocks
     src/Renderer/Buffer.cpp
     src/Renderer/OpenGLBuffer.hpp
     src/Renderer/OpenGLBuffer.cpp
+    src/Renderer/LowLevel.hpp
+    src/Renderer/LowLevelOpenGL.hpp
+    src/Renderer/LowLevelOpenGL.cpp
 
     # Importers
     src/Importers/GLTF2.hpp
