Start to abstract some of the opengl code into classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(blocks
     src/Camera.hpp
     src/Camera.cpp
     src/Shader.hpp
+    src/Shader.cpp
     src/PlayerInput.hpp
     src/Texture.hpp
     src/TriangleMesh.hpp
