--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,41 @@ elseif(MSVC)
 endif()
 
 ###########################################################
+# Glad
+###########################################################
+add_library(Glad STATIC src/Vendor/glad/src/glad.cpp)
+
+target_include_directories(Glad
+  PUBLIC
+    src/Vendor/glad/include)
+
+###########################################################
+# Dear, ImGui
+###########################################################
+add_library(ImGui
+  STATIC
+    src/Vendor/imgui/imgui.h
+    src/Vendor/imgui/imgui_internal.h
+    src/Vendor/imgui/imgui.cpp
+    src/Vendor/imgui/imgui_demo.cpp
+    src/Vendor/imgui/imgui_draw.cpp
+    src/Vendor/imgui/imgui_widgets.cpp
+    src/Vendor/imgui/examples/imgui_impl_sdl.h
+    src/Vendor/imgui/examples/imgui_impl_sdl.cpp
+    src/Vendor/imgui/examples/imgui_impl_opengl3.h
+    src/Vendor/imgui/examples/imgui_impl_opengl3.cpp)
+
+target_include_directories(ImGui
+  PUBLIC
+    src/Vendor/imgui)
+
+target_link_libraries(ImGui PRIVATE Glad)
+
+target_compile_definitions(ImGui PRIVATE IMGUI_IMPL_OPENGL_LOADER_GLAD)
+
+###########################################################
 # Han Engine
 ###########################################################
-add_library(HanInterface INTERFACE)
-target_include_directories(HanInterface INTERFACE include)
-
 add_library(Han
     # Include files
     include/Han/Han.hpp
@@ -47,6 +77,7 @@ add_library(Han
     include/Han/Math/Float.hpp
     include/Han/Math/Quaternion.hpp
     include/Han/Application.hpp
+    include/Han/Camera.hpp
     include/Han/Sid.hpp
     include/Han/Allocator.hpp
     include/Han/MallocAllocator.hpp
@@ -59,40 +90,46 @@ add_library(Han
     include/Han/Collections/StringView.hpp
     include/Han/Collections/RobinHashMap.hpp
     include/Han/EngineInterface.hpp
+    include/Han/Texture.hpp
+    include/Han/InputSystem.hpp
+    include/Han/Shader.hpp
+    include/Han/Json.hpp
+    include/Han/Path.hpp
+    include/Han/Window.hpp
+    include/Han/Program.hpp
+    include/Han/PlayerInput.hpp
+    include/Han/OpenGL.hpp
+    include/Han/Model.hpp
+    include/Han/Renderer/Buffer.hpp
+    include/Han/Renderer/LowLevel.hpp
+    include/Han/Renderer.hpp
+    include/Han/ResourceManager.hpp
+    include/Han/Renderer/Material.hpp
+    include/Han/Utils.hpp
+    include/Han/TriangleMesh.hpp
+    include/Han/Memory.hpp
+    include/Han/ResourceFile.hpp
 
     # Core
-    src/Engine/Program.hpp
+    src/Engine/Application.cpp
     src/Engine/Program.cpp
+    src/Engine/Editor.hpp
+    src/Engine/Editor.cpp
     src/Engine/EngineInterface.cpp
-    src/Engine/InputSystem.hpp
     src/Engine/InputSystem.cpp
     src/Engine/GameInstance.hpp
-    src/Engine/Camera.hpp
     src/Engine/Camera.cpp
-    src/Engine/Shader.hpp
     src/Engine/Shader.cpp
-    src/Engine/PlayerInput.hpp
-    src/Engine/Texture.hpp
     src/Engine/Texture.cpp
-    src/Engine/TriangleMesh.hpp
-    src/Engine/OpenGL.hpp
-    src/Engine/ResourceManager.hpp
     src/Engine/ResourceManager.cpp
-    src/Engine/ResourceFile.hpp
     src/Engine/ResourceFile.cpp
     src/Engine/Sid.cpp
-    src/Engine/Renderer/Material.hpp
     src/Engine/Renderer/Material.cpp
-    src/Engine/Json.hpp
     src/Engine/Json.cpp
-    src/Engine/Model.hpp
-    src/Engine/Window.hpp
     src/Engine/Window.cpp
-    src/Engine/Renderer/Buffer.hpp
     src/Engine/Renderer/Buffer.cpp
     src/Engine/Renderer/OpenGLBuffer.hpp
     src/Engine/Renderer/OpenGLBuffer.cpp
-    src/Engine/Renderer/LowLevel.hpp
     src/Engine/Renderer/LowLevelOpenGL.hpp
     src/Engine/Renderer/LowLevelOpenGL.cpp
 
@@ -100,14 +137,9 @@ add_library(Han
     src/Engine/Importers/GLTF2.hpp
     src/Engine/Importers/GLTF2.cpp
 
-    # Memory
-    src/Engine/Memory.hpp
-
     # Utils
     src/Engine/Logger.cpp
-    src/Engine/Utils.hpp
     src/Engine/Utils.cpp
-    src/Engine/Path.hpp
     src/Engine/Path.cpp
 
     # Math
@@ -115,14 +147,12 @@ add_library(Han
     src/Engine/Math/Mat4.cpp
 
     # Rendering
-    src/Engine/Renderer.hpp
     src/Engine/Renderer.cpp
 
     # FileSystem
     src/Engine/FileSystem/Common.cpp
 
     # Vendor libs
-    src/Vendor/glad/src/glad.cpp
     src/Vendor/stb_image.cpp)
 
 # conditional properties
@@ -137,20 +167,26 @@ if(WIN32)
     target_compile_definitions(Han
       PRIVATE
         _HAS_EXCEPTIONS=0
-	      $<$<CONFIG:Debug>:HAN_DEBUG>
         _USE_MATH_DEFINES
         _CRT_SECURE_NO_WARNINGS)
+elseif(APPLE)
+    target_sources(Han
+      PRIVATE
+        src/Engine/FileSystem/Apple.cpp)
+    target_link_libraries(Han PUBLIC m)
 elseif(UNIX)
     target_link_libraries(Han PUBLIC m)
-elseif(APPLE)
-    target_sources(Han PRIVATE src/Engine/FileSystem/Apple.cpp)
 else()
     # target_compile_options(Han PRIVATE -fno-rtti -fno-exceptions)
     target_compile_options(Han PRIVATE -fno-exceptions)
 endif()
 
 # c++ standard
-set_target_properties(Han PROPERTIES CXX_STANDARD 14)
+set_target_properties(Han PROPERTIES CXX_STANDARD 17)
+
+target_compile_definitions(Han
+  PRIVATE
+    $<$<CONFIG:Debug>:HAN_DEBUG>)
 
 # includes
 target_include_directories(Han
@@ -161,40 +197,34 @@ target_include_directories(Han
     src/Vendor/glad/include
     src/Engine)
 
-target_link_libraries(Han PUBLIC HanInterface PRIVATE CONAN_PKG::sdl2)
-
-###########################################################
-# Han Editor
-###########################################################
-add_executable(HanEditor src/Editor/Main.cpp)
-
-target_link_libraries(HanEditor PRIVATE Han)
-
-target_include_directories(HanEditor
+target_link_libraries(Han
   PRIVATE
-    # The editor cheats and has access to all include files of the engine
-    src/Engine
-    src/Editor)
-
-target_compile_definitions(HanEditor PRIVATE _USE_MATH_DEFINES)
-
-set_target_properties(HanEditor PROPERTIES CXX_STANDARD 14)
+    CONAN_PKG::sdl2
+    ImGui
+    Glad)
 
 ###########################################################
-# Game
+# Game example
 ###########################################################
-add_library(Game SHARED
-    example/Game.cpp)
+add_executable(Game Game/Main.cpp)
 
-target_include_directories(Game PRIVATE src)
+target_link_libraries(Game
+  PRIVATE
+    Han)
 
-target_compile_definitions(Game PRIVATE HAN_COMPILING_DLL)
+target_include_directories(Game
+  PRIVATE
+    Game)
 
-target_link_libraries(Game PRIVATE HanInterface)
+target_compile_definitions(Game
+  PRIVATE
+    $<$<CONFIG:Debug>:HAN_DEBUG>)
 
-# add_custom_command(
-#     TARGET game 
-#     POST_BUILD
-#     COMMAND ${CMAKE_COMMAND} -E copy
-#         $<TARGET_FILE:game>
-#         $<TARGET_FILE_DIR:blocks>/$<TARGET_FILE_NAME:game>)
+if(MSVC)
+    target_compile_definitions(Game PRIVATE _USE_MATH_DEFINES)
+else()
+    target_compile_options(Game PRIVATE -fno-exceptions)
+endif()
+
+set_target_properties(Game PROPERTIES CXX_STANDARD 17)
+
