--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src\\Vendor\\imgui"]
 	path = src\\Vendor\\imgui
 	url = https://github.com/ocornut/imgui
+[submodule "resources/glTF-Sample-Models"]
+	path = resources/glTF-Sample-Models
+	url = https://github.com/KhronosGroup/glTF-Sample-Models
